--- a/mninst_tf2.ipynb
+++ b/mninst_tf2.ipynb
@@ -168,13 +168,19 @@
         "    self.accuracy.update_state(y, prediction)\n",
         "    return loss\n",
         "\n",
+        "#        loss_val = self.train_on_batch(x_, y)\n",
         "  def train(self, trainset, epochs):\n",
         "    for epoch in range(epochs):\n",
         "      self.accuracy.reset_states()\n",
-        "      for step, (X, y) in enumerate(trainset):\n",
-        "        loss_val = self.train_on_batch(X, y)\n",
+        "      for step, (x_, y) in enumerate(trainset):\n",
+        "        with tf.GradientTape() as tape:\n",
+        "          prediction = self.model(x_, training=True)\n",
+        "          loss = self.loss(y, prediction)\n",
+        "        graidents = tape.gradient(loss, self.model.trainable_weights)\n",
+        "        self.optimizer.apply_gradients(zip(graidents, self.model.trainable_weights))\n",
+        "        self.accuracy.update_state(y, prediction)\n",
         "        if step % 100 == 0:\n",
-        "          print(\"epoch = {} step = {} loss = {} accuracy = {}\".format(epoch, step, loss_val, self.accuracy.result()))\n",
+        "          print(\"epoch = {} step = {} loss = {} accuracy = {}\".format(epoch, step, loss, self.accuracy.result()))\n",
         "\n",
         "  def save(self):\n",
         "    self.ckptroot.save(self.checkpoint_prefix)\n",
@@ -194,7 +200,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "95fcb20e-259d-47f8-f0a0-e32ac7ccca48"
+        "outputId": "10088f07-590a-4000-f49f-06fef4ea7483"
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
@@ -209,36 +215,36 @@
         "trainer = Trainer(inputs=784, outputs=10)\n",
         "trainer.train(train_dataset, 5)"
       ],
-      "execution_count": 25,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "epoch = 0 step = 0 loss = 2.2954516410827637 accuracy = 0.1484375\n",
-            "epoch = 0 step = 100 loss = 0.2853879928588867 accuracy = 0.8150526285171509\n",
-            "epoch = 0 step = 200 loss = 0.316416472196579 accuracy = 0.8652829527854919\n",
-            "epoch = 0 step = 300 loss = 0.29787296056747437 accuracy = 0.8870950937271118\n",
-            "epoch = 0 step = 400 loss = 0.2507220208644867 accuracy = 0.899937629699707\n",
-            "epoch = 1 step = 0 loss = 0.28524553775787354 accuracy = 0.9140625\n",
-            "epoch = 1 step = 100 loss = 0.1237095296382904 accuracy = 0.9544399976730347\n",
-            "epoch = 1 step = 200 loss = 0.08728910982608795 accuracy = 0.9564676880836487\n",
-            "epoch = 1 step = 300 loss = 0.12159090489149094 accuracy = 0.9577450156211853\n",
-            "epoch = 1 step = 400 loss = 0.18677344918251038 accuracy = 0.9580151438713074\n",
-            "epoch = 2 step = 0 loss = 0.050243254750967026 accuracy = 0.984375\n",
-            "epoch = 2 step = 100 loss = 0.05707978457212448 accuracy = 0.9693688154220581\n",
-            "epoch = 2 step = 200 loss = 0.1748427450656891 accuracy = 0.9708099961280823\n",
-            "epoch = 2 step = 300 loss = 0.06356002390384674 accuracy = 0.971163809299469\n",
-            "epoch = 2 step = 400 loss = 0.1394553780555725 accuracy = 0.9709515571594238\n",
-            "epoch = 3 step = 0 loss = 0.11740539968013763 accuracy = 0.9765625\n",
-            "epoch = 3 step = 100 loss = 0.04575493559241295 accuracy = 0.9765625\n",
-            "epoch = 3 step = 200 loss = 0.13163749873638153 accuracy = 0.9771066308021545\n",
-            "epoch = 3 step = 300 loss = 0.13568776845932007 accuracy = 0.9776006937026978\n",
-            "epoch = 3 step = 400 loss = 0.039977818727493286 accuracy = 0.9768547415733337\n",
-            "epoch = 4 step = 0 loss = 0.15723735094070435 accuracy = 0.9453125\n",
-            "epoch = 4 step = 100 loss = 0.05166729539632797 accuracy = 0.984684407711029\n",
-            "epoch = 4 step = 200 loss = 0.030858546495437622 accuracy = 0.9841806888580322\n",
-            "epoch = 4 step = 300 loss = 0.04573551565408707 accuracy = 0.983700156211853\n",
-            "epoch = 4 step = 400 loss = 0.040300868451595306 accuracy = 0.9833424091339111\n"
+            "epoch = 0 step = 0 loss = 2.330814838409424 accuracy = 0.0703125\n",
+            "epoch = 0 step = 100 loss = 0.3203080892562866 accuracy = 0.8002784848213196\n",
+            "epoch = 0 step = 200 loss = 0.19475144147872925 accuracy = 0.8598414063453674\n",
+            "epoch = 0 step = 300 loss = 0.19868974387645721 accuracy = 0.8841881155967712\n",
+            "epoch = 0 step = 400 loss = 0.1870538890361786 accuracy = 0.8982621431350708\n",
+            "epoch = 1 step = 0 loss = 0.155066579580307 accuracy = 0.9453125\n",
+            "epoch = 1 step = 100 loss = 0.25226902961730957 accuracy = 0.9549814462661743\n",
+            "epoch = 1 step = 200 loss = 0.202249675989151 accuracy = 0.9566619992256165\n",
+            "epoch = 1 step = 300 loss = 0.07070308178663254 accuracy = 0.9582381844520569\n",
+            "epoch = 1 step = 400 loss = 0.1364327371120453 accuracy = 0.9590866565704346\n",
+            "epoch = 2 step = 0 loss = 0.11043096333742142 accuracy = 0.96875\n",
+            "epoch = 2 step = 100 loss = 0.09893155097961426 accuracy = 0.9709158539772034\n",
+            "epoch = 2 step = 200 loss = 0.06630134582519531 accuracy = 0.9707322716712952\n",
+            "epoch = 2 step = 300 loss = 0.046565502882003784 accuracy = 0.971060037612915\n",
+            "epoch = 2 step = 400 loss = 0.14734983444213867 accuracy = 0.9713022112846375\n",
+            "epoch = 3 step = 0 loss = 0.11903516948223114 accuracy = 0.9609375\n",
+            "epoch = 3 step = 100 loss = 0.053292546421289444 accuracy = 0.9781869053840637\n",
+            "epoch = 3 step = 200 loss = 0.04189044237136841 accuracy = 0.9780395030975342\n",
+            "epoch = 3 step = 300 loss = 0.025386672466993332 accuracy = 0.9784312844276428\n",
+            "epoch = 3 step = 400 loss = 0.0757172480225563 accuracy = 0.9782769680023193\n",
+            "epoch = 4 step = 0 loss = 0.053602270781993866 accuracy = 0.984375\n",
+            "epoch = 4 step = 100 loss = 0.03128965198993683 accuracy = 0.9832147359848022\n",
+            "epoch = 4 step = 200 loss = 0.14603246748447418 accuracy = 0.9830146431922913\n",
+            "epoch = 4 step = 300 loss = 0.0593930184841156 accuracy = 0.9830513000488281\n",
+            "epoch = 4 step = 400 loss = 0.03934811055660248 accuracy = 0.9828943014144897\n"
           ],
           "name": "stdout"
         }
