TensorFlow 2.0 Eager Execution mnist demo

--- a/mninst_tf2.ipynb
+++ b/mninst_tf2.ipynb
@@ -138,7 +138,7 @@
         "import os\n",
         "\n",
         "# Tensorflow 2.0 Eager execution \n",
-        "# mnist\n",
+        "# mnist / using tf.keras\n",
         "\n",
         "class Trainer(object):\n",
         "  def __init__(self, inputs, outputs):\n",
@@ -146,46 +146,39 @@
         "    self.accuracy = tf.keras.metrics.SparseCategoricalAccuracy()\n",
         "    self.optimizer = tf.keras.optimizers.Adam()\n",
         "    self.model_path = './my_model'\n",
-        "    self.create_model(inputs, outputs)\n",
+        "    self.build_model(inputs, outputs)\n",
         "    self.checkpoint_prefix = os.path.join(self.model_path, \"ckpt\")\n",
         "    self.ckptroot = tf.train.Checkpoint(optimizer=self.optimizer, model=self.model)\n",
         "\n",
-        "  def create_model(self, inputs, outputs):\n",
+        "  def build_model(self, inputs, outputs) -> None:\n",
         "    inputs_ = layers.Input((inputs,))\n",
         "    x = layers.Dense(128, activation=\"relu\")(inputs_)\n",
         "    x = layers.Dense(64, activation=\"relu\")(x)\n",
         "    x = layers.Dense(outputs, activation=\"softmax\")(x)\n",
         "    self.model = tf.keras.models.Model(inputs_, x)\n",
-        "    return self.model\n",
         "\n",
         "  @tf.function\n",
-        "  def train_on_batch(self, X, y):\n",
+        "  def train_step(self, x, y) -> float:\n",
         "    with tf.GradientTape() as tape:\n",
-        "      prediction = self.model(X, training=True)\n",
+        "      prediction = self.model(x, training=True)\n",
         "      loss = self.loss(y, prediction)\n",
         "    graidents = tape.gradient(loss, self.model.trainable_weights)\n",
         "    self.optimizer.apply_gradients(zip(graidents, self.model.trainable_weights))\n",
         "    self.accuracy.update_state(y, prediction)\n",
         "    return loss\n",
         "\n",
-        "#        loss_val = self.train_on_batch(x_, y)\n",
-        "  def train(self, trainset, epochs):\n",
+        "  def train(self, dataset, epochs) -> None:\n",
         "    for epoch in range(epochs):\n",
         "      self.accuracy.reset_states()\n",
-        "      for step, (x_, y) in enumerate(trainset):\n",
-        "        with tf.GradientTape() as tape:\n",
-        "          prediction = self.model(x_, training=True)\n",
-        "          loss = self.loss(y, prediction)\n",
-        "        graidents = tape.gradient(loss, self.model.trainable_weights)\n",
-        "        self.optimizer.apply_gradients(zip(graidents, self.model.trainable_weights))\n",
-        "        self.accuracy.update_state(y, prediction)\n",
+        "      for step, (x, y) in enumerate(dataset):\n",
+        "        loss = self.train_step(x, y)\n",
         "        if step % 100 == 0:\n",
         "          print(\"epoch = {} step = {} loss = {} accuracy = {}\".format(epoch, step, loss, self.accuracy.result()))\n",
         "\n",
-        "  def save(self):\n",
+        "  def save(self) -> None:\n",
         "    self.ckptroot.save(self.checkpoint_prefix)\n",
         "  \n",
-        "  def load(self):\n",
+        "  def load(self) -> None:\n",
         "    self.ckptroot.restore(tf.train.latest_checkpoint(self.model_path))\n"
       ],
       "execution_count": 0,
@@ -200,7 +193,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 442
         },
-        "outputId": "10088f07-590a-4000-f49f-06fef4ea7483"
+        "outputId": "cb661ad5-369a-4bd3-d307-1bf43cb57683"
       },
       "source": [
         "(x_train, y_train), (x_test, y_test) = tf.keras.datasets.mnist.load_data()\n",
@@ -210,41 +203,41 @@
         "train_dataset = tf.data.Dataset.from_tensor_slices((X_train, y_train))\n",
         "train_dataset = train_dataset.shuffle(buffer_size=1024).batch(128)\n",
         "test_dataset = tf.data.Dataset.from_tensor_slices((x_test, y_test))\n",
-        "testset = testset.batch(128)\n",
+        "test_dataset = testset.batch(128)\n",
         "\n",
         "trainer = Trainer(inputs=784, outputs=10)\n",
         "trainer.train(train_dataset, 5)"
       ],
-      "execution_count": 31,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "epoch = 0 step = 0 loss = 2.330814838409424 accuracy = 0.0703125\n",
-            "epoch = 0 step = 100 loss = 0.3203080892562866 accuracy = 0.8002784848213196\n",
-            "epoch = 0 step = 200 loss = 0.19475144147872925 accuracy = 0.8598414063453674\n",
-            "epoch = 0 step = 300 loss = 0.19868974387645721 accuracy = 0.8841881155967712\n",
-            "epoch = 0 step = 400 loss = 0.1870538890361786 accuracy = 0.8982621431350708\n",
-            "epoch = 1 step = 0 loss = 0.155066579580307 accuracy = 0.9453125\n",
-            "epoch = 1 step = 100 loss = 0.25226902961730957 accuracy = 0.9549814462661743\n",
-            "epoch = 1 step = 200 loss = 0.202249675989151 accuracy = 0.9566619992256165\n",
-            "epoch = 1 step = 300 loss = 0.07070308178663254 accuracy = 0.9582381844520569\n",
-            "epoch = 1 step = 400 loss = 0.1364327371120453 accuracy = 0.9590866565704346\n",
-            "epoch = 2 step = 0 loss = 0.11043096333742142 accuracy = 0.96875\n",
-            "epoch = 2 step = 100 loss = 0.09893155097961426 accuracy = 0.9709158539772034\n",
-            "epoch = 2 step = 200 loss = 0.06630134582519531 accuracy = 0.9707322716712952\n",
-            "epoch = 2 step = 300 loss = 0.046565502882003784 accuracy = 0.971060037612915\n",
-            "epoch = 2 step = 400 loss = 0.14734983444213867 accuracy = 0.9713022112846375\n",
-            "epoch = 3 step = 0 loss = 0.11903516948223114 accuracy = 0.9609375\n",
-            "epoch = 3 step = 100 loss = 0.053292546421289444 accuracy = 0.9781869053840637\n",
-            "epoch = 3 step = 200 loss = 0.04189044237136841 accuracy = 0.9780395030975342\n",
-            "epoch = 3 step = 300 loss = 0.025386672466993332 accuracy = 0.9784312844276428\n",
-            "epoch = 3 step = 400 loss = 0.0757172480225563 accuracy = 0.9782769680023193\n",
-            "epoch = 4 step = 0 loss = 0.053602270781993866 accuracy = 0.984375\n",
-            "epoch = 4 step = 100 loss = 0.03128965198993683 accuracy = 0.9832147359848022\n",
-            "epoch = 4 step = 200 loss = 0.14603246748447418 accuracy = 0.9830146431922913\n",
-            "epoch = 4 step = 300 loss = 0.0593930184841156 accuracy = 0.9830513000488281\n",
-            "epoch = 4 step = 400 loss = 0.03934811055660248 accuracy = 0.9828943014144897\n"
+            "epoch = 0 step = 0 loss = 2.401430368423462 accuracy = 0.0703125\n",
+            "epoch = 0 step = 100 loss = 0.37805455923080444 accuracy = 0.8125\n",
+            "epoch = 0 step = 200 loss = 0.26897135376930237 accuracy = 0.8657493591308594\n",
+            "epoch = 0 step = 300 loss = 0.22414110600948334 accuracy = 0.8877439498901367\n",
+            "epoch = 0 step = 400 loss = 0.251615047454834 accuracy = 0.900307834148407\n",
+            "epoch = 1 step = 0 loss = 0.17741423845291138 accuracy = 0.9609375\n",
+            "epoch = 1 step = 100 loss = 0.1385960578918457 accuracy = 0.9545173048973083\n",
+            "epoch = 1 step = 200 loss = 0.17163556814193726 accuracy = 0.9560790061950684\n",
+            "epoch = 1 step = 300 loss = 0.1316082626581192 accuracy = 0.9572518467903137\n",
+            "epoch = 1 step = 400 loss = 0.1568848043680191 accuracy = 0.9576254487037659\n",
+            "epoch = 2 step = 0 loss = 0.11484960466623306 accuracy = 0.9765625\n",
+            "epoch = 2 step = 100 loss = 0.05554544925689697 accuracy = 0.9707611203193665\n",
+            "epoch = 2 step = 200 loss = 0.1581699550151825 accuracy = 0.9694885015487671\n",
+            "epoch = 2 step = 300 loss = 0.10816937685012817 accuracy = 0.9704630374908447\n",
+            "epoch = 2 step = 400 loss = 0.154901385307312 accuracy = 0.9705034494400024\n",
+            "epoch = 3 step = 0 loss = 0.061798885464668274 accuracy = 0.984375\n",
+            "epoch = 3 step = 100 loss = 0.056965894997119904 accuracy = 0.9772586822509766\n",
+            "epoch = 3 step = 200 loss = 0.19427944719791412 accuracy = 0.9776119589805603\n",
+            "epoch = 3 step = 300 loss = 0.10184891521930695 accuracy = 0.9782755374908447\n",
+            "epoch = 3 step = 400 loss = 0.06798649579286575 accuracy = 0.977965235710144\n",
+            "epoch = 4 step = 0 loss = 0.04399261623620987 accuracy = 0.9921875\n",
+            "epoch = 4 step = 100 loss = 0.029679415747523308 accuracy = 0.9834467768669128\n",
+            "epoch = 4 step = 200 loss = 0.05979399383068085 accuracy = 0.9832866787910461\n",
+            "epoch = 4 step = 300 loss = 0.08791574835777283 accuracy = 0.9831291437149048\n",
+            "epoch = 4 step = 400 loss = 0.011280790902674198 accuracy = 0.9828358888626099\n"
           ],
           "name": "stdout"
         }
@@ -259,7 +252,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
-        "outputId": "0810fcc2-144c-4d0e-f8f6-cfd623cb12ea"
+        "outputId": "5eb6e94e-0d91-446a-d559-8fb031fc956b"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -267,7 +260,6 @@
         "def plt_mnist(x, y, plt_num=5):\n",
         "  plt.figure(figsize=(20,4))\n",
         "  for index, (image, label) in enumerate(zip(x[0:plt_num], y[0:plt_num])):\n",
-        "    plt.subplot(1, 5, index + 1)\n",
         "    plt.imshow(np.reshape(image, (28,28)), cmap=plt.cm.gray)\n",
         "    plt.title('{}: label: {}\\n'.format('Predict', label), fontsize = 20)\n",
         "\n",
@@ -276,7 +268,7 @@
         "predict = [tf.argmax(e).numpy() for e in predict_]\n",
         "plot_mnist(x_test, predict)"
       ],
-      "execution_count": 21,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "display_data",
